<resources>
    <string name="app_name">GitHub</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="company">Company</string>
    <string name="email_not_found">Email is hidden</string>
    <string name="no_company">No company</string>
    <string name="no_bio">No bio</string>
    <string name="application_name">App name</string>
    <string name="build_version">Build version</string>
    <string name="users">Users</string>
    <string name="build">Build</string>
</resources>
